      Inserters less often pick up other stuff when they actually need to refuel themselves or their drop target.
    - Eventual inserter discovery loop to find inserters built by other mods without raising the appropriate events.
    - The refuel cheat doesn't create power from thin air anymore.\n
      First, the inserter's held items are checked.\n
      Then an item is searched at the pickup location (burner inventory, normal inventory, belt lane or tile).\n
      And last, an item is searched at the drop location (burner inventory, normal inventory, belt lane or tile).\n
      If an item is found, it is teleported into the inserter burner inventory.\n
    - Inserters also leech fuel for themselves from drop target.\n
      This is unreliable for now, but still good enough for low traffic with cheat refueling enabled.\n
    - Admin chat command /iflreset to reset the mod state and rediscover all inserters immediately.
    - Chat command /iflstats to print some statistics about the known inserters.
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2025-11-02
  Bugfixes:
    - Fixed ring buffer length calculation (was larger than needed).
    - Fixed continous inserter (re)discovery performance degradation on surfaces with large numbers of generated chunks independent from inserter count.\n
      Changed discovery from getting inserter lists per surface to getting them per chunk.\n
      UPS cost for discovery is now almost independent of the size of the discovered area on each surface.
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2025-11-09
  Features:
    - Implemented maintaining a desired minimum drop target fuel item count mimicking non-leeching vanilla inserter behavior.
      Inserters still always grab full hands when available and space in drop target inventory allows.