@@ -14,6 +14,7 @@ inserter-fuel-leech-pickup-margin-ticks=Pickup distance margin [ticks]
 inserter-fuel-leech-no-use-for-fuel-seconds-to-wait=Delay when not using fuel [s]
 inserter-fuel-leech-missing-resource-seconds-to-wait=Delay when no fuel found [s]
 inserter-fuel-leech-missing-power-seconds-to-wait=Delay when unpowered [s]
+inserter-fuel-leech-vanilla-self-refuel-seconds-to-wait=Delay when waiting for vanilla inserter refuel behavior [s]
 inserter-fuel-leech-wait-variation-seconds=Delay variation [s]
 
 inserter-fuel-leech-chat-log-color=Debug message color
@@ -35,6 +36,7 @@ inserter-fuel-leech-pickup-margin-ticks=Inserters will teleport fuel items into 
 inserter-fuel-leech-no-use-for-fuel-seconds-to-wait=Seconds to wait before next update when the inserter or its target don't use fuel items.\nThis also is the reaction delay for changing the inserter drop target.\nIncrease this first when experiencing UPS lag.
 inserter-fuel-leech-missing-resource-seconds-to-wait=Seconds to wait before next update when the inserter is supposed to get fuel for itself or its target, but there is no fuel to pick up.\nThis also is the reaction delay for when fuel items become available.\nIncrease this when experiencing UPS lag because of notoriously underfueled smelter columns.
 inserter-fuel-leech-missing-power-seconds-to-wait=Seconds to wait before next update when an inserter not burning fuel items is unpowered.\nThis also is the reaction delay for when electricity (or fluids for some modded inserters) is restored.\nIncrease this when experiencing UPS lag in factories that make heavy use of power switches or modded fluid-powered inserters.
+inserter-fuel-leech-vanilla-self-refuel-seconds-to-wait=Seconds to wait before next update when an inserter burning fuel items has no fuel items and can refuel from a burner inventory at the pickup location (standard engine behavior) [s]
 inserter-fuel-leech-wait-variation-seconds=Maximum duration in seconds to add to the previous wait durations to help spreading the update load evenly.\nIncrease this if experiencing recurring UPS spikes in an interval that matches one of the other settings for some time after building lots of inserters in a short time frame.\nIncreasing this doesn't help when UPS is continously below 60.
 
 inserter-fuel-leech-chat-log-color=
