@@ -71,9 +71,18 @@ data:extend({
         default_value = 10,
     },
     {
-        name = "inserter-fuel-leech-wait-variation-seconds",
+        name = "inserter-fuel-leech-vanilla-self-refuel-seconds-to-wait",
         type = "double-setting",
         order = "025",
+        setting_type = "runtime-global",
+        minimum_value = 1,
+        maximum_value = 600,
+        default_value = 2,
+    },
+    {
+        name = "inserter-fuel-leech-wait-variation-seconds",
+        type = "double-setting",
+        order = "030",
         setting_type = "runtime-global",
         minimum_value = 0,
         maximum_value = 60,
