@@ -78,3 +78,6 @@ Date: 2025-11-09
   Features:
     - Implemented maintaining a desired minimum drop target fuel item count mimicking non-leeching vanilla inserter behavior.
       Inserters still always grab full hands when available and space in drop target inventory allows.
+  Bugfixes:
+    - Fixed newly placedburner inserters taking the unpowered amount of time before first trying to fuel their drop target from their pickup source.
+      There now is a separate setting for the seconds to wait when waiting for the engine to refuel an inserter. The default is 2.
